Fix for progress panel not respecting and overlapping the script library panel when opened.

--- a/src/Spe/sitecore modules/PowerShell/Styles/ise.css
+++ b/src/Spe/sitecore modules/PowerShell/Styles/ise.css
@@ -235,8 +235,8 @@ a.ps-link {
 }
 
 #ProgressOverlay {
-    left: 4px;
-    right:44px;
+    left: 8px;
+    right: 8px;
     border-radius: 15px;
 }
 
